# enelvo-microservice

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  __init__.py  app.py  normalization.proto  normalization_client.py  normalization_pb2.py  normalization_pb2_grpc.py  normalization_server.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: constraints.txt  dependabot.yml  release.yml
examples/: normalization_client.py
protos/: normalization.proto
src/: normalization_pb2.py  normalization_pb2_grpc.py  normalization_server.py
