[tool.poetry]
name = "enelvo-microservice"
version = "0.9.6"
description = "Enelvo pt_BR normalizer microservice."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/enelvo-microservice"
repository = "https://github.com/staticdev/enelvo-microservice"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.36.1"
protobuf = "^3.15.3"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.4.0"
black = "^20.8b1"
pre-commit-hooks = "^3.4.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
