[tool.poetry]
name = "enelvo-microservice"
version = "0.9.6"
description = "Enelvo pt_BR normalizer microservice."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/enelvo-microservice"
repository = "https://github.com/staticdev/enelvo-microservice"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.37.0"
protobuf = "^3.15.8"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.5.0"
black = "^21.4b2"
pre-commit-hooks = "^3.4.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
