[tool.poetry]
name = "enelvo-microservice"
version = "0.9.6"
description = "Enelvo pt_BR normalizer microservice."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/enelvo-microservice"
repository = "https://github.com/staticdev/enelvo-microservice"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.43.0"
protobuf = "^4.21.8"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.7.0"
black = "^21.12b0"
pre-commit-hooks = "^4.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
